assets/css/styles.css
/*===== GOOGLE FONTS =====*/
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");

/*===== VARIABLES CSS =====*/
:root {
  --header-height: 3rem;

  /*========== Colors ==========*/
  --title-color: #0b0a0a;
  --text-color: #403a3a;
  --text-link: #2a65fa;
  --text-color-light: #707070;
  --container-color: #fafafa;
  --container-color-alt: #f0efef;
  --body-color: #fcfcfc;

  /*========== Font and typography ==========*/
  --body-font: "Poppins", sans-serif;
  --h1-font-size: 1.5rem;
  --h2-font-size: 1.25rem;
  --h3-font-size: 1rem;
  --normal-font-size: 0.938rem;
  --small-font-size: 0.875rem;
  --smaller-font-size: 0.813rem;

  /*========== Font weight ==========*/
  --font-medium: 500;
  --font-semi-bold: 600;

  /*========== Margenes ==========*/
  --mb-1: 0.5rem;
  --mb-2: 1rem;
  --mb-3: 1.5rem;

  /*========== z index ==========*/
  --z-tooltip: 10;
  --z-fixed: 100;
}

/*========== BASE ==========*/
*,
::before,
::after {
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

/*========== Variables Dark theme ==========*/
body.dark-theme {
  --title-color: #f2f2f2;
  --text-color: #bfbfbf;
  --text-link: #5f88f2;
  --container-color: #212121;
  --container-color-alt: #181616;
  --body-color: #2b2b2b;
}

/*========== Button Dark/Light ==========*/
.change-theme {
  position: absolute;
  right: 0;
  top: 2.2rem;
  display: flex;
  color: var(--text-color);
  font-size: 1.2rem;
  cursor: pointer;
}

.change-theme:hover {
  color: var(--title-color);
}

/*========== Font size variables to scale cv ==========*/
body.scale-cv {
  --h1-font-size: 0.938rem;
  --h2-font-size: 0.938rem;
  --h3-font-size: 0.875rem;
  --normal-font-size: 0.813rem;
  --small-font-size: 0.75rem;
  --smaller-font-size: 0.688rem;
}

/*========== Generate PDF button ==========*/
.generate-pdf {
  /*display: none;*/
  /*position: absolute;*/
  /*top: 2.2rem;*/
  /*left: 0;*/
  font-size: 1.2rem;
  color: var(--text-color);
  cursor: pointer;
  margin: 0 auto;
  border: 2px solid #575252;
  width: 60%;
}

.generate-pdf:hover {
  color: var(--title-color);
}

/*========== Classes modified to reduce size and print on A4 sheet ==========*/
.scale-cv .change-theme,
.scale-cv .generate-pdf,
.scale-cv .skills-button,
.scale-cv .icpc__award-button {
  display: none;
}

.scale-cv .bd-container {
  max-width: 595px;
}

.scale-cv .section {
  pad: 1.5rem 0 0.8rem;
}

.scale-cv .section-title {
  margin-bottom: 0.75rem;
}

.scale-cv .resume__left,
.scale-cv .resume__right {
  padding: 0 1rem;
}

.scale-cv .home__img {
  width: 90px;
  height: 90px;
}

.scale-cv .home__container {
  gap: 1.5rem;
}

.scale-cv .home__data {
  gap: 0.25rem;
}

.scale-cv .home__address,
.scale-cv .social__container {
  gap: 0.75rem;
}

.scale-cv .home__icon,
.scale-cv .social__icon,
.scale-cv .interests__icon {
  font-size: 1rem;
}

.scale-cv .education__container,
.scale-cv .experience__container,
.scale-cv .certificate__container {
  gap: 1rem;
}

.scale-cv .education__time,
.scale-cv .experience__time {
  padding-right: 0.5rem;
}

.scale-cv .education__rounder,
.scale-cv .experience__rounder {
  width: 11px;
  height: 11px;
  margin-top: 0.22rem;
}

.scale-cv .education__line,
.scale-cv .experience__line {
  width: 1px;
  height: 104%;
  transform: translate(5px, 0);
}

.scale-cv .education__data,
.scale-cv .experience__data {
  gap: 0.25rem;
}

.scale-cv .skills__name {
  margin-bottom: var(--mb-1);
}

.scale-cv .skills__name.show {
  margin-bottom: var(--mb-1);
}

.scale-cv .skills__content {
  grid-template-columns: repeat(1, 1fr);
}

.scale-cv .interests__container {
  column-gap: 2.5rem;
}

.scale-cv .display-only-print {
  display: block !important;
}

body {
  margin: 0 0 var(--header-height) 0;
  padding: 0;
  font-family: var(--body-font);
  font-size: var(--normal-font-size);
  background-color: var(--body-color);
  color: var(--text-color);
}

h1,
h2,
h3,
ul,
p {
  margin: 0;
}

h1,
h2,
h3 {
  color: var(--title-color);
  font-weight: var(--font-medium);
}

ul {
  padding: 0;
  list-style: none;
}

a {
  text-decoration: none;
  color: var(--text-link);
}

img {
  max-width: 100%;
  height: auto;
}

/*========== CLASS CSS ==========*/
.section {
  padding: 1.5rem 0;
}

.section-title {
  font-size: var(--h2-font-size);
  color: var(--title-color);
  font-weight: var(--font-semi-bold);
  text-transform: uppercase;
  letter-spacing: 0.35rem;
  text-align: center;
  margin-bottom: var(--mb-3);
}

/*========== LAYOUT ==========*/
.bd-container {
  max-width: 968px;
  width: calc(100% - 3rem);
  margin-left: var(--mb-3);
  margin-right: var(--mb-3);
}

.bd-grid {
  display: grid;
  gap: 1.5rem;
}

.l-header {
  width: 100%;
  position: fixed;
  bottom: 0;
  left: 0;
  z-index: var(--z-fixed);
  background-color: var(--body-color);
  box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.1);
  transition: 0.3s;
}

/*========== NAV ==========*/
.nav {
  height: var(--header-height);
  display: flex;
  justify-content: space-between;
  align-items: center;
}

@media screen and (max-width: 968px) {
  .nav__menu {
    position: fixed;
    bottom: -100%;
    left: 0;
    width: 100%;
    padding: 2rem 1.5rem;
    background-color: var(--body-color);
    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
    border-radius: 1rem 1rem 0 0;
    z-index: var(--z-fixed);
    transition: 0.3s;
  }
}

.nav__logo,
.nav__toggle {
  color: var(--title-color);
  font-weight: var(--font-medium);
}

.nav__toggle {
  font-size: 1.2rem;
  cursor: pointer;
}

.nav__item {
  text-align: center;
}

.nav__list {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 2rem;
}

.nav__link {
  display: flex;
  flex-direction: column;
  font-size: var(--smaller-font-size);
  color: var(--text-color-light);
  font-weight: var(--font-medium);
}

.nav__link:hover {
  color: var(--title-color);
}

.nav__icon {
  font-size: 1.2rem;
  margin-bottom: var(--mb-1);
}

/* Show menu */
.show-menu {
  bottom: var(--header-height);
}
/* ... */

